--- a/第十八章 async函数/18.3 语法.html
+++ b/第十八章 async函数/18.3 语法.html
@@ -225,7 +225,7 @@
             for (let promise of promises) {
                 result.push(await promise);
             }
-            console.log(results);
+            console.log(result);
         }
     </script>
 </body>
