--- a/第十九章 Class的基本语法/19.9 this的指向.html
+++ b/第十九章 Class的基本语法/19.9 this的指向.html
@@ -17,6 +17,48 @@
                 console.log(text)
             }
         }
+        const logger = new Logger();
+        const {printName} = logger;
+        // printName();//TypeError: Cannot read property 'print' of undefined
+
+        //上面的代码中,printName方法中的this默认指向Logger类的实例.
+        //但是,如果将这个方法提取出来单独使用,this会指向该方法运行时所在的环境,因为找不到print方法而导致报错
+
+        //一个简单的方法是,在构造函数方法中绑定this,这样就不会找不到print方法了
+        class Logger {
+            constructor() {
+                this.printName = this.printName.bind(this);
+            }
+        }
+
+        //另一种解决方法是使用箭头函数
+        class Logger {
+            constructor() {
+                this.printName = (name = 'there') => {
+                    this.print(`Hello ${name}`);
+                }
+            }
+        }
+
+        //还有一种解决方法是使用Proxy,在获取方法的时候自动绑定this
+        function selfish (target) {
+            const cache = new WeakMap();
+            const handler = {
+                get (target, key) {
+                    const value = Reflect.get(target, key);
+                    if (typeof value !== 'function') {
+                        return value
+                    }
+                    if (!cache.has(value)) {
+                        cache.set(value, value.bind(target));
+                    }
+                    return cache.get(value);
+                }
+            };
+            const proxy = new Proxy(target, handler);
+            return proxy
+        }
+        const logger = selfish(new Logger());
     </script>
 </body>
 </html>
