--- a/第十九章 Class的基本语法/19.9 this的指向.html
+++ b/第十九章 Class的基本语法/19.9 this的指向.html
@@ -56,7 +56,7 @@
                 }
             };
             const proxy = new Proxy(target, handler);
-            return proxy
+            return proxy;
         }
         const logger = selfish(new Logger());
     </script>
